# CUDA-practice

./: .gitignore  README.md
Balamurli/: CMakeLists.txt  main.cu  profile.ncu-rep
Bhavana/: CMakeLists.txt  main.cu
Bhavana/output/: profile.ncu-rep
Bickramjit/: CMakeLists.txt  main.cu
Harshita/: main.cu
Harshita/output/: CMakeCache.txt  Makefile  cmake_install.cmake  my_project  profile.ncu-rep
ManMohan/: main.cu  myreport.ncu-rep
Prajwal/: main.cu  my_project_full_profile.ncu-rep  my_project_report.nsys-rep
Praveena/: main.cu  profile.ncu-rep
Riteish/: main.cu
